--- a/Corey's_Workspace.ipynb
+++ b/Corey's_Workspace.ipynb
@@ -60,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def height_from_mars(x,y): #Assuming that mars is at the origin\n",
