--- a/Project_3.ipynb
+++ b/Project_3.ipynb
@@ -40,8 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m = UNITS.meter\n",
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,15 +67,14 @@
     "              mass = .64171 * (10**24) * kg    \n",
     "                )\n",
     "\n",
-    "rocket = System(x= -1 * condition_mars.radius,\n",
+    "rocket = System(x= -1 * mars.radius,\n",
     "                y= 0 * m,\n",
     "                dry_mass = 1433788 * kg,\n",
     "                rho = 0.02 * kg/m**3, #needs function to update\n",
     "                h = 0 * m, #height\n",
-    "                thrust = 22800000 * N\n",
-    "                fuel_init = 1000000 kg\n",
-    "                \n",
-    "                            )\n"
+    "                thrust = 22800000 * N,\n",
+    "                fuel_init = 1000000 * kg\n",
+    "               )\n"
    ]
   },
   {
@@ -87,31 +88,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def calc_mass_r(t):\n",
+    "    rocket.fuel_init * -.18 * t\n",
+    "    return rocket.dry_mass + rocket.fuel_init\n",
+    "    \n",
+    "calc_mass_rocket(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_grav(height, mass_rocket):\n",
+    "    # G is the gravitational constant\n",
+    "    return G * mars.mass * mass_rocket / (height * m + mars.radius)**2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "5323571.191885069 kilogram meter/second<sup>2</sup>"
+       "9021100.56992121 kilogram meter/second<sup>2</sup>"
       ],
       "text/latex": [
-       "$5323571.191885069 \\frac{kilogram \\cdot meter}{second^{2}}$"
+       "$9021100.56992121 \\frac{kilogram \\cdot meter}{second^{2}}$"
       ],
       "text/plain": [
-       "<Quantity(5323571.191885069, 'kilogram * meter / second ** 2')>"
+       "<Quantity(9021100.56992121, 'kilogram * meter / second ** 2')>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def calc_grav(height):\n",
-    "    # G is the gravitational constant\n",
-    "    return G * mars.mass * rocket.mass / (height+mars.radius)**2\n",
-    "calc_grav(100*m)"
+    "a = calc_mass_r(100)\n",
+    "calc_grav(3000, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def height_from_mars(x,y): #Assuming that mars is at the origin\n",
+    "    #[theta,rho] = cart2pol(x,y) #but it doens't like big numbers\n",
+    "    x /= m #strip the units\n",
+    "    y /= m\n",
+    "    rho = sqrt(x**2+y**2) * m #distance formula\n",
+    "    height = rho - (3396200*m)\n",
+    "    return height\n",
+    "\n",
+    "def force_of_drag(v,h):\n",
+    "    # rho is the air density\n",
+    "    # v is velocity of rocket\n",
+    "    # c_d is drag coeffeciant of drag of rocket\n",
+    "    # but it's dependant on velocity\n",
+    "    C_d = drag(v)\n",
+    "    return -(1/2) * rho * v.mag * v * C_d * area\n",
+    "\n",
+    "def rho(h): #math from NASA https://www.grc.nasa.gov/www/k-12/airplane/atmosmrm.html\n",
+    "    if h < 7000: #two zones for density\n",
+    "        T = -31 - 0.000998 * h #temp\n",
+    "        P = .699*exp(-0.00009*h) #pressure\n",
+    "    else:\n",
+    "        T = -23.4 - 0.00222*h\n",
+    "        P = .699*exp(-0.00009*h)\n",
+    "    return P/(.1921*(T+273.1)) #return density"
    ]
   },
   {
@@ -122,27 +181,22 @@
    },
    "outputs": [],
    "source": [
-    "def calc_mass_rocket(height):\n",
-    "    fuel_mass= fuel_init\n",
-    "    rocket.dry_mass + fuel_mass\n",
-    "    "
+    "def slope_func(state,t,system):\n",
+    "    x, y, vx, vy = state\n",
+    "    unpack(system)\n",
+    "    \n",
+    "    h = height_from_mars(x,y)\n",
+    "    a_grav = calc_grav(h)\n",
+    "    \n",
+    "    v = Vector(vx,vy)\n",
+    "    \n",
+    "    f_drag = force_of_drag(v.mag,h)\n",
+    "    a_drag = d_drag/mass\n",
+    "    \n",
+    "    a = a_grav + a_drag + a_thrust\n",
+    "    \n",
+    "    return v.x, v.y, a.x, a.y"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
