--- a/Shawn_Workspace.ipynb
+++ b/Shawn_Workspace.ipynb
@@ -18,6 +18,20 @@
     "def calc_height()\n",
     "#takes velocity"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mars = System(\n",
+    "duration = 687, #days\n",
+    "distance_sun = 227.9 * 10 ^6, #km\n",
+    "distance_orbit = distance_sun * 3.14159)"
+   ]
   }
  ],
  "metadata": {
