Added grav functions to main

--- a/Corey's_Workspace.ipynb
+++ b/Corey's_Workspace.ipynb
@@ -90,7 +90,7 @@
     "        P = .699*exp(-0.00009*h)\n",
     "    return P/(.1921*(T+273.1)) #return density\n",
     "\n",
-    "def f_thrust(v,t):\n",
+    "def f_thrust(system,v,t):\n",
     "    "
    ]
   },
