Changes on Shawn Workspace

--- a/Shawn_Workspace.ipynb
+++ b/Shawn_Workspace.ipynb
@@ -32,6 +32,30 @@
     "distance_sun = 227.9 * 10 ^6, #km\n",
     "distance_orbit = distance_sun * 3.14159)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mars = System(x= 0 * m,\n",
+    "              y= 0 * m,\n",
+    "              radius = 3396200 * m,\n",
+    "              mass = .64171 * (10**24) * kg    \n",
+    "                )\n",
+    "\n",
+    "rocket = System(x= -1 * mars.radius,\n",
+    "                y= 0 * m,\n",
+    "                dry_mass = 1433788 * kg,\n",
+    "                rho = 0.02 * kg/m**3, #needs function to update\n",
+    "                h = 0 * m, #height\n",
+    "                thrust = 22800000 * N,\n",
+    "                fuel_init = 1000000 * kg\n",
+    "               )\n"
+   ]
   }
  ],
  "metadata": {
