--- a/Shawn_Workspace.ipynb
+++ b/Shawn_Workspace.ipynb
@@ -9,28 +9,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_height()\n",
+    "from modsim import *\n",
+    "from math import *\n",
     "#takes velocity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for ^: 'float' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-7893cdf80887>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m mars = System(duration = 687, #days\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdistance_sun\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m227.9\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m10\u001b[0m \u001b[1;33m^\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;31m#km\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mdistance_orbit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdistance_sun\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m3.14159\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m )\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for ^: 'float' and 'int'"
+     ]
+    }
+   ],
    "source": [
-    "mars = System(\n",
-    "duration = 687, #days\n",
-    "distance_sun = 227.9 * 10 ^6, #km\n",
-    "distance_orbit = distance_sun * 3.14159)"
+    "mars = System(duration = 687, #days\n",
+    "distance_sun = 227.9 * 10 ^ 6, #km\n",
+    "distance_orbit = distance_sun * 3.14159\n",
+    ")"
    ]
   },
   {
@@ -55,6 +64,18 @@
     "                thrust = 22800000 * N,\n",
     "                fuel_init = 1000000 * kg\n",
     "               )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "vp = sqrt(2*G*sun.mass(saturn.radius/mars.radius/(mars.radius+saturn.radius)))\n",
+    "vp = "
    ]
   }
  ],
