Should have fixed function on Shawn's workspace

--- a/Project_3.ipynb
+++ b/Project_3.ipynb
@@ -260,7 +260,9 @@
     "    return System(init=init,mass=mass,radius=radius)\n",
     "    \n",
     "def make_system_titan(condition,system,theta): #the system being that of Saturn\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    Does the same thing above but in reference to Saturn\n",
+    "    \"\"\"\n",
     "    unpack(condition)\n",
     "    theta1 = np.deg2rad(theta*UNITS.degree)\n",
     "    x,y = pol2cart(theta1,orbital_radius)\n",
@@ -275,7 +277,9 @@
     "    return System(init=init,mass=mass,radius=radius)\n",
     "\n",
     "def make_system_rocket(condition,system,theta):#system of Mars\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    In reference to Mars instead\n",
+    "    \"\"\"\n",
     "    unpack(condition)\n",
     "    \n",
     "    theta1 = np.deg2rad(theta*UNITS.degree)\n",
