--- a/Shawn_Workspace.ipynb
+++ b/Shawn_Workspace.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -22,8 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "m = UNITS.meter\n",
@@ -38,11 +40,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>orbital_radius</th>\n",
+       "      <td>227900000000.0 meter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>radius</th>\n",
+       "      <td>3396200 meter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mass</th>\n",
+       "      <td>6.4171e+23 kilogram</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>orbital_speed</th>\n",
+       "      <td>24080.0 meter / second</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "orbital_radius      227900000000.0 meter\n",
+       "radius                     3396200 meter\n",
+       "mass                 6.4171e+23 kilogram\n",
+       "orbital_speed     24080.0 meter / second\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sun = Condition(x = 0 * m, #i'm using conditions instead of systems to reduce the am't of systems we have\n",
     "             y = 0 * m, # I converted sun and mars to systems for now\n",
@@ -91,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -152,12 +210,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "# This is the start of the things I've done today"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +238,7 @@
        "<Quantity(880.9648437806447, 'meter / second')>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,30 +270,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.508595602759359e+26 meter\n"
+      "24080.0 meter / second\n",
+      "25778.0 meter / second\n",
+      "1698085.566201815 meter\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(<Quantity(3396200, 'meter')>, <Quantity(9.017191205518718e+26, 'meter')>)"
+       "(<Quantity(3396200, 'meter')>, <Quantity(28.86759637016803, 'meter')>)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def calc_radii(dv):\n",
-    "    vp =  mars.orbital_speed + dv\n",
+    "    dv *= m/s\n",
+    "    \n",
+    "    vp  =  mars.orbital_speed + dv\n",
+    "    \n",
+    "    \n",
     "    \"\"\"\n",
     "    Takes the change in velocity from the previous function\n",
     "    Adds change in velocity to speed of mars, gives us speed of rocket as it orbits around the sun\n",
@@ -244,14 +309,23 @@
     "    \n",
     "    So I added something to get the right units trusting that your equation works so it should be fine now - Corey\n",
     "    \"\"\"\n",
+    "    #print(vp)\n",
+    "    #print(G)\n",
+    "    #print(mars.radius)\n",
+    "    #print(sun.mass)\n",
+    "    #print\n",
     "    \n",
-    "    f = G * sun.mass*mars.radius*(s**2/m**3) - (vp**2)*(mars.radius**2)/ ((vp**2)*(mars.radius)-2*G*sun.mass)\n",
-    "    print(f)\n",
     "    r1 = mars.radius\n",
+    "    f = (G * sun.mass*r1 - (vp**2)*(r1**2)) / ((vp**2)*(r1)-2*G*sun.mass)\n",
+    "    i=abs(f)\n",
+    "    print(mars.orbital_speed)\n",
+    "    print(vp)\n",
+    "    print(i)\n",
+    "    \n",
     "    r2 = 2*f+r1\n",
     "    return r1, r2\n",
     "\n",
-    "v= calc_radii(1000)\n",
+    "v= calc_radii(1698)\n",
     "v\n"
    ]
   },
