final copies of orbit equation

--- a/Shawn_Workspace.ipynb
+++ b/Shawn_Workspace.ipynb
@@ -261,7 +261,7 @@
     "    Calculates change in mass of fuel over time \n",
     "    references flow rate from source\n",
     "    \"\"\"\n",
-    "    print(saturn.radius)\n",
+    "    #print(saturn.radius)\n",
     "    dv = g*I*log(mass_initial/new_mass)\n",
     "    return dv\n",
     "    \n",
@@ -270,32 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24080.0 meter / second\n",
-      "25778.0 meter / second\n",
-      "1698085.566201815 meter\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(<Quantity(3396200, 'meter')>, <Quantity(28.86759637016803, 'meter')>)"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def calc_radii(dv):\n",
-    "    dv *= m/s\n",
+    "    #dv *= m/s\n",
     "    \n",
     "    vp  =  mars.orbital_speed + dv\n",
     "    \n",
@@ -315,27 +295,43 @@
     "    #print(sun.mass)\n",
     "    #print\n",
     "    \n",
-    "    r1 = mars.radius\n",
+    "    r1 = mars.orbital_radius\n",
     "    f = (G * sun.mass*r1 - (vp**2)*(r1**2)) / ((vp**2)*(r1)-2*G*sun.mass)\n",
     "    i=abs(f)\n",
     "    print(mars.orbital_speed)\n",
     "    print(vp)\n",
     "    print(i)\n",
     "    \n",
-    "    r2 = 2*f+r1\n",
-    "    return r1, r2\n",
-    "\n",
-    "v= calc_radii(1698)\n",
-    "v\n"
+    "    r2 = 2*i+r1\n",
+    "    return r1, r2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58232000.0 meter\n",
+      "24080.0 meter / second\n",
+      "24960.964843780646 meter / second\n",
+      "17046880791.242533 meter\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<Quantity(227900000000.0, 'meter')>, <Quantity(261993761582.48508, 'meter')>)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -345,7 +341,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a = calc_dv(100)\n",
+    "v= calc_radii(a)\n",
+    "v"
+   ]
   }
  ],
  "metadata": {
